# cours-NN1

./: CNAME  README.md  enhancements.md  package-lock.json  package.json
.github/workflows/: svelte-to-github-pages.yml
backend_prep/: README.md  make_fashion_dataset.py  make_zero_one_dataset.py  pyproject.toml  train_lenet_all_digits.py  tune_and_train_all_digits.py  tune_and_train_fashion.py  tune_and_train_zero_one.py
src/lib/generic/: image.ts
src/routes/: +page.svelte
src/routes/about/: +page.svelte
src/routes/all_digits/: +page.svelte
src/routes/fashion/: +page.svelte
src/routes/zero_one/: +page.svelte
