[project]
name = "backend-prep"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*" # Because tensorflow isn't yet packaged for 3.14
dependencies = [
    "keras-tuner>=1.4.8",
    "pillow>=12.1.0",
    "tensorflow>=2.20.0",
    "tensorflowjs>=3.18.0",
]

[dependency-groups]
dev = [
    "black>=22.12.0",
    "isort>=7.0.0",
    "keras-tuner>=1.4.8",
    "pillow>=12.1.0",
    "ruff>=0.14.14",
    "tensorflow>=2.20.0",
    "tensorflowjs>=3.18.0",
]
